# polkadot-hackathon

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/assets/: Cargo.toml
pallets/assets/src/: lib.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: lib.rs
pallets/distribution/: Cargo.toml
pallets/distribution/src/: lib.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: assets.rs  currency.rs  lib.rs  prices.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
test-case/: .eslintrc.js  .prettierignore  hack-a-node.json  package.json  tsconfig.json
test-case/src/: command.ts  index.ts  params.ts
test-case/src/chain-ops/: api.ts  assets.ts  balances.ts  distribution.ts  keyring.ts  oracle.ts
test-case/src/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-tx.ts  augment-types.ts  definitions.ts  lookup.ts  types-lookup.ts
test-case/src/interfaces/primitives/: definitions.ts  types.ts
test-case/src/logger/: index.ts
test-case/src/suite/: finish.ts  index.ts  init.ts  iteration.ts  prices.ts
