[package]
name = "primitives"
version = "1.0.0"
authors = ["Equilibrium Team <https://github.com/equilibrium-eosdt>"]
homepage = "https://equilibrium.io/"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.2.2"
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"frame-support/std",
]