[package]
name = "pallet-balances"
version = "1.0.0"
authors = ["Equilibrium Team <https://github.com/equilibrium-eosdt>"]
homepage = "https://equilibrium.io/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }
primitives = { path = "../../primitives", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2022-05", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
